crates/swc_ecma_parser/tests/typescript-errors/issue-1391/case1/input.ts
const Methods {
    f: (x, y) => x + y,
};